[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Area/setting.png" type="Texture" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/buttons/back_base.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/back_click.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/back_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="Settings" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Setting" type="Sprite" parent="."]
position = Vector2( 300, 458.5 )
scale = Vector2( 0.624161, 0.631465 )
texture = ExtResource( 1 )

[node name="SettingLabel" type="Label" parent="."]
margin_left = 160.0
margin_top = 312.0
margin_right = 440.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS
"
align = 1
valign = 1

[node name="Master" type="HSlider" parent="."]
margin_left = 180.0
margin_top = 408.0
margin_right = 420.0
margin_bottom = 424.0
min_value = -30.0
max_value = 0.0

[node name="Music" type="HSlider" parent="." groups=["Music"]]
margin_left = 180.0
margin_top = 480.0
margin_right = 420.0
margin_bottom = 496.0
min_value = -30.0
max_value = 0.0

[node name="Sound_FX" type="HSlider" parent="."]
margin_left = 180.0
margin_top = 552.0
margin_right = 420.0
margin_bottom = 568.0
min_value = -30.0
max_value = 0.0

[node name="MasterLabel" type="Label" parent="."]
margin_left = 245.0
margin_top = 376.0
margin_right = 354.0
margin_bottom = 390.0
text = "MASTER VOLUME"

[node name="MusicLabel" type="Label" parent="."]
margin_left = 233.0
margin_top = 440.0
margin_right = 372.0
margin_bottom = 454.0
text = "BACKGROUND MUSIC"

[node name="Sound_FXLabel" type="Label" parent="."]
margin_left = 245.0
margin_top = 512.0
margin_right = 354.0
margin_bottom = 526.0
text = "SOUND EFFECTS"

[node name="SettingsBackButton" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 320.0
margin_right = 518.0
margin_bottom = 450.0
rect_scale = Vector2( 0.17, 0.17 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[connection signal="value_changed" from="Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Sound_FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="SettingsBackButton" to="." method="_on_SettingBackButton_pressed"]
